- fixed overflowed rows displaying on dictionary page

--- a/src/pages/dictionary-page/dictionary-page.module.css
+++ b/src/pages/dictionary-page/dictionary-page.module.css
@@ -51,3 +51,9 @@
   font-size: 80%;
   padding-bottom: 8px;
 }
+
+.row {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
